--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,7 +57,7 @@ jobs:
           haxelib install flixel-addons
           haxelib git linc_luajit https://github.com/jigsaw-4277821/linc_luajit.git
           haxelib git polymod https://github.com/MasterEric/polymod.git --quiet
-          haxelib git extension-videoview https://github.com/jigsaw-4277821/extension-videoview.git --quiet
+          haxelib git extension-webm https://github.com/luckydog7/extension-webm --quiet
           haxelib git extension-androidtools https://github.com/jigsaw-4277821/extension-androidtools.git
           haxelib list
 
